# minimal_ml_fastapi

./: .dockerignore  Dockerfile  README.md  app.py  docker-compose.yml  model.py  pyproject.toml
